clusterip-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  type: ClusterIP
  ports:
    - name: "data-rabbitmq"
      port: 5672
      protocol: TCP
    - name: "control-port"
      port: 15672
      protocol: TCP
  selector:
    components: frontend
